ass02-docs/selector-grammar.txt
selector: //TODO

simpleSelector: 
    element | 
    universal |
    attribute |

element: name

universalSelector: '*'

attribute: '[' attribute {'~' | '^' | '$' | '*' | '|'}? '=' '"' value '"' ']' //TODO
    
pseudoClass: structuralPseudoClass | linkPseudoClass | userActionPseudoClass | targetPseudoClass | langPseudoClass | uiElementStatePseudoClass

structuralPseudoClass: ':' {
    'root' |
    'nth-child(' integer ')' | //TODO
    'nth-last-child(' integer ')' | //TODO
    'nth-of-type(' integer ')' | //TODO
    'nth-last-of-type(' integer ')' | //TODO
    'first-child' |
    'last-child' |
    'first-of-type |
    'last-of-type |
    'only-child' |
    'only-of-type' |
    'empty'
    }

linkPseudoClass: ':link'

userActionPseudoClass ':' {'visited' | 'active' | 'hover' | 'focus'}

targetPseudoClass: ':target'

langPseudoCLass: ':lang(' documentLanguage ')' //TODO

uiElementStatePseudoClass: ':' {'enable' | 'disabled' | 'checked'}

firstLinePseudoElement: '::first-line'

firstLetterPseudoElement: '::first-letter'

beforePseudoElement: '::before'

afterPseudoElement: '::after'

class: '.' className //TODO

id: '#' className //TODO

negationPseudoClass: ':not(' simpleSelector ')'

descendantCombinator: selector selector

childCombinator: selector '>' selector

adjacentCombinator: selector '+' selector

generalSibilingCombinator: selector '~' selector

http://www.w3.org/TR/selectors/#selectors
http://www.w3.org/TR/selectors/#simple-selectors-dfn
